Fixed contrast error on register button

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@
         }
         
         .low-contrast-button {
-            background-color: #a78bfa;
+            background-color: #6d28d9;
             color: #e5e7eb;
             border: none;
         }
